Revision history for Perl module Neo4j::Bolt
0.5000 2023-04-18
    - Update for Neo4j v5.0 / libneo4j-client v5.0.0+ (Neo4j::Client 0.51+)
    - Include element_id where appropriate
    - Add types for date/time, duration, point, bytes
    - Conform to Neo4j::Types v2
    - Update (c)
0.4203 2021-09-09
    - Fix support for Perl v5.16, v5.14, v5.12 (#44)
0.4202 2021-02-24
    - Fix rare string encoding issues (#38, #39)
0.4201 2021-01-20
    - Common types for Neo4j objects between Bolt and Driver (Arne)
    - Update (c)
0.4200 2021-01-10
    - Bring version in line with Neo4j::Client 
0.40 2020-12-26
    - Leaving Inline behind
    - Use Neo4j::Client 0.40 based on Alien
    - Enable Bolt v3 and v4 capabilities - transactions, named databases
0.20 2020-06-05
    - Eschew local libneo4j-client; use Neo4j::Client
    - Add Inline baggage for build only
0.12 2020-02-29
    - Stab at finding libneo4j-client on *nix

0.11 2020-02-23
    - Don't error, just exit, Build.PL when missing libneo4j-client
    
0.10 2020-02-22
    - Support TLS encryption
    - First release to CPAN

0.02 2020-02-06
    - Represent Cypher structural types as blessed objects in Perl
    - Fix boolean value representation (now uses JSON::PP::Boolean)

0.01 2019-02-26
    - Initial version: regular API done, error handling, result stats