@@ -89,6 +89,19 @@ Class method. Syntactic sugar; runs L</"_as_perl()"> on the arguments.
 
 =back
 
+=head1 FUNCTIONS
+
+=over
+
+=item is_bool($scalar)
+
+  $boolean = Neo4j::Bolt::NeoValue::is_bool( $value );
+
+Returns true iff Neo4j::Bolt would treat this Perl value as
+a boolean when found in a query parameter.
+
+=back
+
 =head1 AUTHOR
 
  Mark A. Jensen
