@@ -2,12 +2,14 @@ use strict;
 use warnings;
 use Test::More;
 use Neo4j::Bolt::NeoValue;
+use JSON::PP 'decode_json';
 
 #diag "create neo4j_values from SVs";
 my $i = 100;
 my $v = Neo4j::Bolt::NeoValue->_new_from_perl($i);
 is $v->_neotype, "Integer", "Integer";
 is $v->_as_perl, $i, "roundtrip";
+ok ! Neo4j::Bolt::NeoValue::is_bool($v->_as_perl), "int is not bool";
 $i = 100.5;
 $v = Neo4j::Bolt::NeoValue->_new_from_perl($i);
 is $v->_neotype, "Float", "Float";
@@ -16,11 +18,17 @@ $i = "Hey dude";
 $v = Neo4j::Bolt::NeoValue->_new_from_perl($i);
 is $v->_neotype, "String", "String";
 is $v->_as_perl, $i, "roundtrip";
+
+$i = decode_json('[true]')->[0];
+$v = Neo4j::Bolt::NeoValue->_new_from_perl($i);
+is $v->_neotype, "Boolean", "Boolean true";
+ok $v->_as_perl, "Boolean true is truthy";
+ok Neo4j::Bolt::NeoValue::is_bool($v->_as_perl), "Boolean true type";
 $i = \0;
 $v = Neo4j::Bolt::NeoValue->_new_from_perl($i);
 is $v->_neotype, "Boolean", "Boolean";
 ok ! $v->_as_perl, "Boolean false is not truthy";
-is ref($v->_as_perl), "JSON::PP::Boolean", "Boolean false defined and blessed";
+ok Neo4j::Bolt::NeoValue::is_bool($v->_as_perl), "Boolean false type";
 
 $v = Neo4j::Bolt::NeoValue->_new_from_perl(["this", "is",1,"array"]);
 is $v->_neotype, "List", "List";
@@ -28,6 +36,7 @@ is_deeply $v->_as_perl,["this", "is",1,"array"],"roundtrip";
 $v = Neo4j::Bolt::NeoValue->_new_from_perl({ this => "is", a => 5, hash => "map"});
 is $v->_neotype, "Map", "Map";
 is_deeply $v->_as_perl,{ this => "is", a => 5, hash => "map"}, "roundtrip";
+ok ! Neo4j::Bolt::NeoValue::is_bool($v->_as_perl), "map is not bool";
 
 $i = bless { id => 154732534, element_id => "154732534" }, "Neo4j::Bolt::Node";
 $v = Neo4j::Bolt::NeoValue->_new_from_perl($i);
@@ -41,6 +50,7 @@ $i = bless { id => 154732534, element_id => "154732534", labels=>['lab','el'], p
 $v = Neo4j::Bolt::NeoValue->_new_from_perl($i);
 is $v->_neotype, "Node", "Node with Props & Labels";
 is_deeply $v->_as_perl,$i,"Node with Props & Labels roundtrip";
+ok ! Neo4j::Bolt::NeoValue::is_bool($v->_as_perl), "node is not bool";
 
 $i = bless { id => 154732534, element_id => "154732534", start => 53243, start_element_id => "53243", end => 235367, end_element_id => "235367", type => "IS_THING", properties => {these => "are", some => "props"} }, "Neo4j::Bolt::Relationship";
 $v = Neo4j::Bolt::NeoValue->_new_from_perl($i);
