@@ -3,6 +3,7 @@ Revision history for Perl module Neo4j::Bolt
     - Update for Neo4j v5.0 / libneo4j-client v5.0.0+ (Neo4j::Client 0.51+)
     - Include element_id where appropriate
     - Add types for date/time, duration, point, bytes
+    - Support for Perl core distinguished booleans on Perl v5.36+
     - Conform to Neo4j::Types v2
     - Update (c)
 0.4203 2021-09-09
